backend-project refactor: separate animations - use tailwind - fix overflow

--- a/src/app/pages/portfolio/sections/backend-project/backend-project.component.scss
+++ b/src/app/pages/portfolio/sections/backend-project/backend-project.component.scss
@@ -1,46 +1,3 @@
-h3 {
-    font-size: 30px;
-}
-
-h4 {
-    font-size: 24px;
-}
-
-h5 {
-    font-size: 20px;
-}
-
-.all {
-    overflow: hidden;
-}
-
-.preview {
-    position: relative;
-}
-
-.abs-container {
-    right: -10px;
-    position: absolute;
-    bottom: 0;
-}
-
-.arrow-wrapper {
-    transition: transform .3s;
-
-    &:hover {
-        transform: scale(140%);
-    }
-}
-
-.source {
-    margin-top: 20px;
-}
-
-a.link {
-    text-decoration: none;
-    color: unset;
-    
-    span {
-        text-decoration: underline;
-    }
+.my-grid {
+    grid-template-columns: 1fr min-content;
 }
